fix default dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   --secondary-color: #484848;
   --tertiary-color: #606060;
 }
-[data-theme='dark'] {
+[data-theme='light'] {
   --background: #fff;
   --text-primary: #2a2a2a;
   --primary-color: #ff6200;
